--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/qiaodaima/git-hook/issues"
   },
-  "homepage": "https://github.com/qiaodaima/git-hook#readme"
+  "homepage": "https://github.com/qiaodaima/git-hook#readme",
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "husky": "^3.0.0"
+  }
 }
