--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "devDependencies": {
     "eslint": "^6.0.1",
     "husky": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "",
+      "pre-push": "./bin/js-lint"
+    }
   }
 }
