--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "./bin/heck-branch",
       "pre-push": "./bin/js-lint"
     }
